navbar fixed, searchbar on mobile view fixed, go to top icon added

--- a/style.css
+++ b/style.css
@@ -192,8 +192,33 @@ pre {
 
 
 
+  #myBtn {
+    display: none;
+    position: fixed;
+    
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    height: 40px;
+    border: none;
+    outline: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+  }
+  
+  #myBtn:hover {
+    background-color: #555;
+  }
 
 
+
+
+
+  
+  
 
 
 
@@ -239,7 +264,9 @@ pre {
     .prod-card-text{
         font-size: 20px;
     }
-    
+    .card-search{
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 575px){
